# immerschema

./: .gitignore  AGENTS.md  CHANGELOG.md  README-schema-combination.md  README.md  SCHEMA_CHANGELOG.md  combine-schemas.cjs  combine-schemas.ps1  combined-schema.json  index.js  package-lock.json  package.json  pyproject.toml  run-commands.ps1  test_project.json  test_shot.assign.json  test_shot.draft.json  test_shot.lock.json  test_shot.plan.json  test_shot.review.json  validate.js  validate.py  validate_project.js  validate_taxonomy.py
docs/: AGILE_CHEAT_SHEET.md  AGILE_MANUAL.md  ARCHITECTURE.md  CHANGELOG.md  DEPT_ENUM.MD  LLM_IO.md  MIGRATION_GUIDE.md  NAMING_Conventions.md  NEXT.md  RELEASE_PROCESS.md  RISK_FLAGS.md  ROLE.md  SCREEN_ZONES.md  SPLIT_GUIDE.md  TAXONOMY.md  WORK_LOAD.md
examples/: ai_generated_shot.json  audio_reactive_shot.json  comprehensive_project.json  draft-llmnote.json  draft-minimal.json  full-project.json  full.json  live_action_shot.json  simple_project copy.json
schemas/: core.schema.json  project.assign.schema.json  project.draft.schema.json  project.lock.schema.json  project.plan.schema.json  project.review.schema.json  project.schema.json
scripts/: build.js  migrate_to_assets.py  simple_test.js  test_runner.js  update_test_files.ps1  validate_taxonomy.py
test/: edge_cases.json  split_example_tests.json  test_project.json  test_shot.json  validation_tests.json
tests/: test_project.json  test_shot.assign.json  test_shot.draft.json  test_shot.lock.json  test_shot.plan.json  test_shot.review.json  test_split_examples.py
(+113 files in other folders)
