[project]
name = "immerschema"
version = "1.2.0"
description = "JSON-Schema & taxonomy for Fulldome pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "yiii"}]

[project.urls]
Homepage = "https://github.com/yiii/immerschema"

[tool.setuptools]
packages = ["schemas", "shots"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"] 