[project]
name = "immerschema"
version = "1.3.0"
description = "JSON-Schema & taxonomy for Fulldome pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "yiii"}]

[project.urls]
Homepage = "https://github.com/yiii/immerschema"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"] 